--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -46,7 +46,7 @@ header{
         border: 2px solid var(--black-color);
         color: var(--primary-color);
         border-radius: 1rem;
-        transition: all ease-in-out 1s;
+        // transition: all ease-in-out 1s;
         text-decoration: none;
 
         cursor: pointer;
