--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -95,7 +95,7 @@ form{
         color: var(--primary-color);
         border: 2px solid var(--primary-color);
         cursor: pointer;
-        transition: all ease-in-out 0.5s;
+        // transition: all ease-in-out 0.5s;
         text-align: center;
         
 
