--- a/src/container/Contact/Contact.scss
+++ b/src/container/Contact/Contact.scss
@@ -31,6 +31,7 @@
 .app__contact-info{
     display: flex;
     justify-content: center;
+    align-self: flex-start;
     flex-direction: column;
 
     div{
