--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* transition: all ease-in-out 0.2s; */
+}
+
+html{
   scroll-behavior: smooth;
 }
 
