--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -32,7 +32,7 @@
     align-items: flex-start;
     background-color: white;
     border-radius: 1rem;
-    // transition: all ease-in-out 0.5s;
+    transition: all ease-in-out 0.5s;
 
     margin: -1rem 0;
 
